@@ -56,10 +56,17 @@ abstract class AbstractCommandBuilder<T extends AbstractCommandBuilder<T>> imple
         DEFAULT_VM_ARGUMENTS = javaOpts.toArray(new String[javaOpts.size()]);
 
         // Default JVM parameters for all modular JDKs
+        // Additions to these should include good explanations why in the relevant JIRA
+        // Keep them alphabetical to avoid the code history getting confused by reordering commits
         final ArrayList<String> modularJavaOpts = new ArrayList<>();
-        modularJavaOpts.add("--add-exports=java.base/sun.nio.ch=ALL-UNNAMED");
-        modularJavaOpts.add("--add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED");
-        modularJavaOpts.add("--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED");
+        modularJavaOpts.add("--add-exports=java.desktop/sun.awt=ALL-UNNAMED");
+        modularJavaOpts.add("--add-opens=java.base/java.lang=ALL-UNNAMED");
+        modularJavaOpts.add("--add-opens=java.base/java.lang.invoke=ALL-UNNAMED");
+        modularJavaOpts.add("--add-opens=java.base/java.io=ALL-UNNAMED");
+        modularJavaOpts.add("--add-opens=java.base/java.security=ALL-UNNAMED");
+        modularJavaOpts.add("--add-opens=java.base/java.util=ALL-UNNAMED");
+        modularJavaOpts.add("--add-opens=java.management/javax.management=ALL-UNNAMED");
+        modularJavaOpts.add("--add-opens=java.naming/javax.naming=ALL-UNNAMED");
         // As of jboss-modules 1.9.1.Final the java.se module is no longer required to be added. However as this API is
         // designed to work with older versions of the server we still need to add this argument of modular JVM's.
         modularJavaOpts.add("--add-modules=java.se");
